; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_xenbus.c_unregister_hotplug_status_watch.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_xenbus.c_unregister_hotplug_status_watch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.backend_info = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.backend_info*)* @unregister_hotplug_status_watch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unregister_hotplug_status_watch(%struct.backend_info* %0) #0 {
  %2 = alloca %struct.backend_info*, align 8
  store %struct.backend_info* %0, %struct.backend_info** %2, align 8
  %3 = load %struct.backend_info*, %struct.backend_info** %2, align 8
  %4 = getelementptr inbounds %struct.backend_info, %struct.backend_info* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load %struct.backend_info*, %struct.backend_info** %2, align 8
  %9 = getelementptr inbounds %struct.backend_info, %struct.backend_info* %8, i32 0, i32 1
  %10 = call i32 @unregister_xenbus_watch(%struct.TYPE_2__* %9)
  %11 = load %struct.backend_info*, %struct.backend_info** %2, align 8
  %12 = getelementptr inbounds %struct.backend_info, %struct.backend_info* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @kfree(i32 %14)
  br label %16

16:                                               ; preds = %7, %1
  %17 = load %struct.backend_info*, %struct.backend_info** %2, align 8
  %18 = getelementptr inbounds %struct.backend_info, %struct.backend_info* %17, i32 0, i32 0
  store i64 0, i64* %18, align 8
  ret void
}

declare dso_local i32 @unregister_xenbus_watch(%struct.TYPE_2__*) #1

declare dso_local i32 @kfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
